--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="src/test.css">
+  <script type="text/javascript" src="src/test.js"></script>
+  <title>bompoo</title>
+</head>
+<body>
+  <div>test</div>
+</body>
+</html>
